EPBDS-12296 EPBDS-7160 Replace *Value types with Java native types